refactor: update README & env.example; clean package.json

--- a/env.example
+++ b/env.example
@@ -1,54 +1,25 @@
 # Server Configuration
-# Frontend server port (used by Vite, default: 8000)
 FRONTEND_PORT=8000
-# Backend API server port (default: 8001)
 BACKEND_PORT=8001
-# Host to bind servers to (default: 0.0.0.0 for network access, use localhost for local only)
 HOST=0.0.0.0
 NODE_ENV=development
 
-# AI API Configuration (Blacklane Internal)
-# Required: Your Blacklane AI API key
+# Blacklane AI Integration
 AI_API_KEY=sk-your_blacklane_api_key_here
-# Optional: AI provider (default: blacklane)
 AI_PROVIDER=blacklane
-# Optional: AI API base URL (default: https://ai-chat.blacklane.net/api/v1)
 AI_BASE_URL=https://ai-chat.blacklane.net/api/v1
-# Optional: AI model to use (default: seo-landing-page-generator)
 AI_MODEL_ID=seo-landing-page-generator
 
-# Alternative AI Models (available in Blacklane endpoint):
-# AI_MODEL_ID=azure/gpt-4o          # Most powerful GPT-4o
-# AI_MODEL_ID=azure/gpt-4o-mini     # Fast and cost-effective
-# AI_MODEL_ID=azure/o1              # Reasoning model
-# AI_MODEL_ID=gpt-5                 # GPT-5 (requires temperature=1)
-# AI_MODEL_ID=Claude-Sonnet-4       # Anthropic Claude
-# AI_MODEL_ID=gemini-2.5-pro        # Google Gemini
-
-# Alternative: External OpenAI API
-# AI_PROVIDER=openai
-# AI_BASE_URL=https://api.openai.com/v1
-# AI_API_KEY=sk-your_openai_api_key_here
-# AI_MODEL_ID=gpt-4o-mini
-
-# Contentful Configuration (for publishing features)
-# Optional: Required only if you want to publish content to Contentful
+# Contentful CMS Integration
 CONTENTFUL_SPACE_ID=your_contentful_space_id_here
-# Optional: Contentful environment (default: master)
 CONTENTFUL_ENVIRONMENT_ID=master
-# Optional: Required for publishing - your Contentful Management API token
 CONTENTFUL_MANAGEMENT_TOKEN=CFPAT-your_management_api_token_here
 
 # Authentication Configuration
-# Required: Admin username for accessing the application
 AUTH_USERNAME=admin
-# Required: Admin password for accessing the application
 AUTH_PASSWORD=your_secure_password_here
-# Optional: JWT secret key (will be auto-generated if not provided)
 JWT_SECRET=your_jwt_secret_key_here
-# Optional: Session duration in minutes (default: 25)
 SESSION_DURATION_MINUTES=25
 
 # Security & CORS Configuration
-# Optional: CORS origin for frontend (default: http://localhost:8000)
 CORS_ORIGIN=http://localhost:8000
