fix: update ESLint config and clean up frontend code; improve error handling; remove unused variables; update README

--- a/env.example
+++ b/env.example
@@ -12,7 +12,8 @@ AI_MODEL_ID=seo-landing-page-generator
 
 # Contentful CMS Integration
 CONTENTFUL_SPACE_ID=your_contentful_space_id_here
-CONTENTFUL_ENVIRONMENT_ID=master
+# For production use 'main', for development use alex's dev environment
+CONTENTFUL_ENVIRONMENT_ID=alex-suprun-dev-new 
 CONTENTFUL_MANAGEMENT_TOKEN=CFPAT-your_management_api_token_here
 
 # Authentication Configuration
